--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="cupcake" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -210,6 +210,236 @@
                   </div>
             </div>
       </section>
+      <!-- count and card section -->
+      <section class="w-[80%] mx-auto px-8 md:px-18 py-5 my-10">
+        <div class="flex flex-col lg:flex-row justify-between mt-11 ">
+              <!-- date container -->
+              <div class=" text-center md:text-start lg:text-start pb-5">
+                    <h2 class="text-lg md:text-3xl lg:text-4xl font-extrabold pb-6 ">Deal of the day</h2>
+                    <p>Contrary to popular belief, is not simply random text. It has roots in a piece of
+                          classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+              </div>
+              <!-- tarik container -->
+              <div class=" flex sm:text-center gap-3 ">
+                <div>
+                    <span class="countdown font-mono text-4xl">
+                      <span style="--value:29;"></span>
+                    </span>
+                    days
+                  </div> 
+                  <div>
+                    <span class="countdown font-mono text-4xl">
+                      <span style="--value:15;"></span>
+                    </span>
+                    hours
+                  </div> 
+                  <div>
+                    <span class="countdown font-mono text-4xl">
+                      <span style="--value:25;"></span>
+                    </span>
+                    min
+                  </div> 
+                  <div>
+                    <span class="countdown font-mono text-4xl">
+                      <span style="--value:08;"></span>
+                    </span>
+                    sec
+                  </div>
+              </div>
+        </div>
+        <!-- food item section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+              <div class="card  pt-10   border-2">
+                    <figure class="px-10 pt-10">
+                          <img src="./images//fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                          <h2 class="card-title">12.90$ - 18.85$!</h2>
+                          <p>Apples</p>
+                          <img src="./images//Group 24.svg" alt="">
+                          <div class=" flex text-amber-400 gap-5 my-5">
+                              <i class="fa-solid fa-star fa-spin"></i>
+                              <i class="fa-solid fa-star fa-spin"></i>
+                              <i class="fa-regular fa-star fa-spin"></i>
+                              <i class="fa-regular fa-star fa-spin"></i>
+                              <i class="fa-regular fa-star fa-spin"></i>
+                          </div>
+                          <div class="card-actions">
+                                <button class="btn" onclick="my_modal_1.showModal()">Details</button>
+                          </div>
+                    </div>
+              </div>
+              <div class="card  pt-10   border-2">
+                    <figure class="px-10 pt-10">
+                          <img src="./images//fruit7.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                          <h2 class="card-title">12.90$ - 18.85$!</h2>
+                          <p>Apples</p>
+                          <img src="./images//Group 24.svg" alt="">
+                          <div class=" flex text-amber-400 gap-5 my-5">
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                        </div>
+                          <div class="card-actions">
+                                <button class="btn" onclick="my_modal_2.showModal()">Details</button>
+                          </div>
+                          <dialog id="my_modal_2" class="modal">
+                            <div class="modal-box  justify-center items-center text-center">
+                                  <div>
+                                    <img src="./images//fruit7.png" alt="Shoes" class="rounded-xl w-full" />
+                                  </div>
+                                  <h3 class="font-bold text-lg">12.90$ - 18.85$!</h3>
+                                  <p class="py-4">Apples</p>
+                                  <div class=" flex text-amber-400 gap-5 my-5 justify-center">
+                                    <i class="fa-solid fa-star fa-spin"></i>
+                                    <i class="fa-solid fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                </div>
+                                  <div class="m-auto">
+                                        <img class="m-auto" src="./images//Group 24.svg" alt="">
+                                  </div>
+                                  <div class="modal-action">
+                                        <form method="dialog">
+                                              <!-- if there is a button in form, it will close the modal -->
+                                              <button class="btn">Close</button>
+                                        </form>
+                                  </div>
+                            </div>
+                      </dialog>
+                    </div>
+              </div>
+              <div class="card  pt-10   border-2">
+                    <figure class="px-10 pt-10">
+                          <img src="./images//fruit8.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                          <h2 class="card-title">12.90$ - 18.85$!</h2>
+                          <p>Apples</p>
+                          <img src="./images//Group 24.svg" alt="">
+                          <div class=" flex text-amber-400 gap-5 my-5">
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                        </div>
+                          <div class="card-actions">
+                                <button class="btn" onclick="my_modal_3.showModal()">Details</button>
+                          </div>
+                          <dialog id="my_modal_3" class="modal">
+                            <div class="modal-box  justify-center items-center text-center">
+                                  <div>
+                                    <img src="./images//fruit8.png" alt="Shoes" class="rounded-xl w-full" />
+                                  </div>
+                                  <h3 class="font-bold text-lg">12.90$ - 18.85$!</h3>
+                                  <p class="py-4">Apples</p>
+                                  <div class=" flex text-amber-400 gap-5 my-5 justify-center">
+                                    <i class="fa-solid fa-star fa-spin"></i>
+                                    <i class="fa-solid fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                    <i class="fa-regular fa-star fa-spin"></i>
+                                </div>
+                                  <div class="m-auto">
+                                        <img class="m-auto" src="./images//Group 24.svg" alt="">
+                                  </div>
+                                  <div class="modal-action">
+                                        <form method="dialog">
+                                              <!-- if there is a button in form, it will close the modal -->
+                                              <button class="btn">Close</button>
+                                        </form>
+                                  </div>
+                            </div>
+                      </dialog>
+                    </div>
+              </div>
+              <div class="card  pt-10   border-2">
+                    <figure class="px-10 pt-10">
+                          <img src="./images//fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                          <h2 class="card-title">12.90$ - 18.85$!</h2>
+                          <p>Apples</p>
+                          <img src="./images//Group 24.svg" alt="">
+                          <div class=" flex text-amber-400 gap-5 my-5">
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-solid fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                            <i class="fa-regular fa-star fa-spin"></i>
+                        </div>
+                          <div class="card-actions">
+                                <button class="btn" onclick="my_modal_4.showModal()">Details</button>
+                          </div>
+                    </div>
+                    <!--  -->
+                    <dialog id="my_modal_4" class="modal">
+                        <div class="modal-box  justify-center items-center text-center">
+                              <div>
+                                <img src="./images//fruit9.png" alt="Shoes" class="rounded-xl w-full" />
+                              </div>
+                              <h3 class="font-bold text-lg">12.90$ - 18.85$!</h3>
+                              <p class="py-4">Apples</p>
+                              <div class=" flex text-amber-400 gap-5 my-5 justify-center">
+                                <i class="fa-solid fa-star fa-spin"></i>
+                                <i class="fa-solid fa-star fa-spin"></i>
+                                <i class="fa-regular fa-star fa-spin"></i>
+                                <i class="fa-regular fa-star fa-spin"></i>
+                                <i class="fa-regular fa-star fa-spin"></i>
+                            </div>
+                              <div class="m-auto">
+                                    <img class="m-auto" src="./images//Group 24.svg" alt="">
+                              </div>
+                              <div class="modal-action">
+                                    <form method="dialog">
+                                          <!-- if there is a button in form, it will close the modal -->
+                                          <button class="btn">Close</button>
+                                    </form>
+                              </div>
+                        </div>
+                  </dialog>
+              </div>
+              <!-- <button> section</button> -->
+
+        </div>
+        <div class="text-center">
+              <button
+                    class=" text-[14px] lg:text-[18px] font-extrabold py-[7px] px-[15px] lg:py-[12px] lg:px-[18px] rounded-lg hover:bg-[#c94a4ce9] bg-[#F85559] mt-10">shop
+                    now</button>
+        </div>
+        <!-- Open the modal using ID.showModal() method-->
+        <dialog id="my_modal_1" class="modal">
+              <div class="modal-box  justify-center items-center text-center">
+                    <div>
+                          <img src="./images//fruit6.png" class="w-full" alt="">
+                    </div>
+                    <h3 class="font-bold text-lg">12.90$ - 18.85$!</h3>
+                    <p class="py-4">Apples</p>
+                    <div class=" flex text-amber-400 gap-5 my-5 justify-center">
+                        <i class="fa-solid fa-star fa-spin"></i>
+                        <i class="fa-solid fa-star fa-spin"></i>
+                        <i class="fa-regular fa-star fa-spin"></i>
+                        <i class="fa-regular fa-star fa-spin"></i>
+                        <i class="fa-regular fa-star fa-spin"></i>
+                    </div>
+                    <div class="m-auto">
+                          <img class="m-auto" src="./images//Group 24.svg" alt="">
+                    </div>
+                    <div class="modal-action">
+                          <form method="dialog">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <button class="btn">Close</button>
+                          </form>
+                    </div>
+              </div>
+        </dialog>
+  </section>
     </main>
     <footer class="bg-[#121212]">
         <div class=" mx-auto px-8 md:px-18 lg:mx-24 py-5 my-10">
