some error solved

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                           <h2 class="card-title">12.90$ - 18.85$</h2>
-                          <p>Apples</p>
+                          <p>Oranges</p>
                           <img src="./images//Group 24.svg" alt="">
                           <div class=" flex text-amber-400 gap-5 my-5">
                             <i class="fa-solid fa-star fa-spin"></i>
@@ -304,7 +304,7 @@
                                     <img src="./images//fruit7.png" alt="Shoes" class="rounded-xl w-[80%] mx-auto" />
                                   </div>
                                   <h3 class="font-bold text-lg">12.90$ - 18.85$</h3>
-                                  <p class="py-4">Apples</p>
+                                  <p class="py-4">Oranges</p>
                                   <div class=" flex text-amber-400 gap-5 my-5 justify-center">
                                     <i class="fa-solid fa-star fa-spin"></i>
                                     <i class="fa-solid fa-star fa-spin"></i>
@@ -331,7 +331,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                           <h2 class="card-title">12.90$ - 18.85$</h2>
-                          <p>Apples</p>
+                          <p>Dragon Fruits</p>
                           <img src="./images//Group 24.svg" alt="">
                           <div class=" flex text-amber-400 gap-5 my-5">
                             <i class="fa-solid fa-star fa-spin"></i>
@@ -349,7 +349,7 @@
                                     <img src="./images//fruit8.png" alt="Shoes" class="rounded-xl w-[80%] mx-auto" />
                                   </div>
                                   <h3 class="font-bold text-lg">12.90$ - 18.85$</h3>
-                                  <p class="py-4">Apples</p>
+                                  <p class="py-4">Dragon Fruits</p>
                                   <div class=" flex text-amber-400 gap-5 my-5 justify-center">
                                     <i class="fa-solid fa-star fa-spin"></i>
                                     <i class="fa-solid fa-star fa-spin"></i>
@@ -376,7 +376,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                           <h2 class="card-title">12.90$ - 18.85$</h2>
-                          <p>Apples</p>
+                          <p>Banana</p>
                           <img src="./images//Group 24.svg" alt="">
                           <div class=" flex text-amber-400 gap-5 my-5">
                             <i class="fa-solid fa-star fa-spin"></i>
@@ -396,7 +396,7 @@
                                 <img src="./images//fruit9.png" alt="Shoes" class="rounded-xl w-[80%] mx-auto" />
                               </div>
                               <h3 class="font-bold text-lg">12.90$ - 18.85$</h3>
-                              <p class="py-4">Apples</p>
+                              <p class="py-4">Banana</p>
                               <div class=" flex text-amber-400 gap-5 my-5 justify-center">
                                 <i class="fa-solid fa-star fa-spin"></i>
                                 <i class="fa-solid fa-star fa-spin"></i>
@@ -532,7 +532,7 @@
                       <div class="flex gap-4 items-center text-start">
 
                             <div class=" 2xl:flex">
-                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone//fruit 1.png"
+                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone/group 1.svg"
                                         alt="">
                             </div>
                             <div class="">
@@ -545,7 +545,7 @@
                       <div class="flex gap-4  items-center text-start">
 
                             <div class=" 2xl:flex">
-                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone//fruit 1.png"
+                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone/fruit 1.png"
                                         alt="">
                             </div>
                             <div class="">
@@ -558,7 +558,7 @@
                       <div class="flex gap-4  items-center text-start">
 
                             <div class=" 2xl:flex">
-                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone//fruit 1.png"
+                                  <img class="bg-[#e7e7e7] p-2 rounded-full" src="./icone/gift-box 1.png"
                                         alt="">
                             </div>
                             <div class="">
@@ -577,37 +577,37 @@
                       <div class="flex gap-4 items-center ">
                             <div class="">
                                   <h1 class="text-xl font-extrabold">Integrated Supplier</h1>
-                                  <hr class="ml-0 2xl:ml-[380px] w-[100px]">
+                                  <hr class="ml-0 2xl:ml-[350px] w-[100px]">
                                   <p>Professional employees are there for you to pick <br> the most
                                         amazing and fresh fruits.</p>
                             </div>
                             <div class=" 2xl:flex">
                                   <img class="bg-[#e7e7e7] p-2 rounded-full"
-                                        src="./icone//gift-box 1.png 1.png 1.png" alt="">
+                                        src="./icone/like 1.png" alt="">
                             </div>
                       </div>
                       <div class="flex gap-4 items-center">
                             <div class="">
                                   <h1 class="text-xl font-extrabold ">Sustainable Practice</h1>
-                                  <hr class="ml-0 2xl:ml-[380px]  w-[100px]">
+                                  <hr class="ml-0 2xl:ml-[350px]  w-[100px]">
                                   <p>Professional employees are there for you to pick <br> the most
                                         amazing and fresh fruits.</p>
                             </div>
                             <div class=" 2xl:flex">
                                   <img class="bg-[#e7e7e7] p-2 rounded-full"
-                                        src="./icone//ice-cream 1.png 1.png 1.png" alt="">
+                                        src="./icone/love 1.png" alt="">
                             </div>
                       </div>
                       <div class="flex gap-4 items-center">
                             <div class="">
                                   <h1 class="text-xl font-extrabold ">The Benefits Only</h1>
-                                  <hr class="ml-0 2xl:ml-[380px] w-[100px]">
+                                  <hr class="ml-0 2xl:ml-[350px] w-[100px]">
                                   <p>Professional employees are there for you to pick <br> the most
                                         amazing and fresh fruits.</p>
                             </div>
                             <div class=" 2xl:flex">
                                   <img class="bg-[#e7e7e7] p-2 rounded-full"
-                                        src="./icone//like 1.png 1.png" alt="">
+                                        src="./icone/ice-cream 1.png" alt="">
                             </div>
                       </div>
                 </div>
